dev/test_programs/INVALID/group12/scan_parse_errors/var_decl_error2.go
// invalid short declaration

package main

func main() {
var (
a, b int
x := 0
)
if false {
println(a, b, x)
}
}